--- a/kanshyrating.html
+++ b/kanshyrating.html
@@ -15,25 +15,61 @@
             max-width: 600px;
             padding: 20px;
             background-color: #00d2ff;
-            border: 5px solid #828282;
+            border: 5px solid #000000;
             border-radius: 10px;
             display: flex;
             flex-direction: column;
             align-items: center;
+            opacity: 0.9; /* Set the opacity to 20% */
         }
-
         #ratingForm {
             /* Add any additional styling for the form here */
         }
+
+    #ratingFormContainer {
+        /* ... (existing styles) ... */
+        text-align: center; /* Center the form content */
+    }
+
+    /* Add any additional styling for the form here */
+    #ratingForm input[type="submit"] {
+        width: 150px; /* Set the width of the submit button */
+        padding: 10px; /* Add padding around the text inside the button */
+        background-color: #4CAF50; /* Set a background color */
+        color: white; /* Set the text color */
+        border: none; /* Remove the default button border */
+        border-radius: 5px; /* Add rounded corners to the button */
+        font-size: 16px; /* Set the font size */
+        cursor: pointer; /* Add a pointer cursor on hover */
+        margin-top: 20px; /* Add some space between the dropdown and the submit button */
+        border: 3px solid #000000;
+    }
+
+    /* Add hover effect for the button */
+    #ratingForm input[type="submit"]:hover {
+        background-color: #45a049; /* Darker green on hover */
+    }
 
         /* Style the image to center it within the container */
         #ratingForm img {
         margin: 0 auto; /* Center the image horizontally */
         display: block; /* Remove any default spacing that may affect centering */
-        border: 5px solid #828282; /* Add a border to the image */
+        border: 5px solid #000000; /* Add a border to the image */
         border-radius: 50%; /* Make the image circular by setting border-radius to 50% */
         margin-bottom: 20px; /* Add some space between the image and the form */
         }
+    /* Center the "Select Staff:" label */
+    #ratingForm label[for="staff"] {
+        display: block; /* Ensure the label takes the full width of its container */
+        text-align: center;
+        margin-bottom: 3px; /* Add some space between the label and the dropdown */
+    }
+    /* Center the "Select rating:" label */
+    #ratingForm label[for="rating"] {
+        display: block; /* Ensure the label takes the full width of its container */
+        text-align: center;
+        margin-bottom: 3px; /* Add some space between the label and the dropdown */
+    }
     </style>
     <!-- Include jQuery library -->
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
@@ -43,7 +79,7 @@
         <div id="ratingForm">
             <!-- Add the image above the h1 element -->
             <img src="channels4_profile_1.jpg" alt="Staff Image" width="100" height="100">
-            <h1>Staff Rating Form</h1>
+            <h1>Ticket Support Rating</h1>
             <form id="ratingForm">
                 <!-- Dropdown list to select staff -->
                 <label for="staff">Select Staff:</label>
