--- a/kanshyrating.html
+++ b/kanshyrating.html
@@ -128,6 +128,7 @@
 
                 // Create the JSON payload with all staff ratings
                 var payload = {
+                    "content": "**===================**:\n\n" // Add two line breaks after the header
                     "content": "**All Staff Ratings🌟**:\n\n" // Add two line breaks after the header
                 };
 
